# magic_summary

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  repomix-output.xml
.windsurf/rules/: main.md
core/: config.py  models.py  storage.py  summarization.py  transcription.py
docs/: feature_01.md  prd.md  ui.md
ui/: controller.py  main_window.py
