[project]
name = "magic-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "instructor>=1.11.3",
    "openai>=1.109.1",
    "pydantic>=2.9.2",
    "pyside6>=6.9.2",
    "python-dotenv>=1.1.1",
    "python-vlc>=3.0.21203",
]
